changed in base.html, pillars, FAQs, etc.

--- a/code/app/templates/base.html
+++ b/code/app/templates/base.html
@@ -84,27 +84,25 @@
           <div class="icon-box">
             <div class="icon"><i class=" ri-folder-user-line"></i></div>
             <h4 class="title"><a href="">Efficiency</a></h4>
-            <p class="description">Using state of the art technology and real-time data to streamline processes for all hospitals, third-party agencies, and insurances</p>
+            <p class="description">An integrated system that automatically filter only the agencies that are appropriate and personalized to the patient, increasing productivity for hospitals, home health agencies, and insurance providers.</p>
           </div>
         </div>
 
         <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="300">
           <div class="icon-box">
             <div class="icon"><i class="ri-hand-heart-line"></i></div>
-            <h4 class="title"><a href="">Personalization</a></h4>
-            <p class="description">Providing patients complete transparency on recommendation while improving patient quality of health care</p>
+            <h4 class="title"><a href="">Compliance Risk Avoidance</a></h4>
+            <p class="description"> A safeguard towards staying in compliance, whereby the only home health agencies chosen are those personally recommended and chosen by the patient. </p>
           </div>
         </div>
 
         <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="400">
           <div class="icon-box">
             <div class="icon"><i class="ri-database-2-line"></i></div>
-            <h4 class="title"><a href="">Transparency</a></h4>
-            <p class="description">Our system provides transparent recommendation explanations, metrics and interactive charts which are visible to patients and all other agents.</p>
+            <h4 class="title"><a href="">Improved Patient Outcomes</a></h4>
+            <p class="description">Quick, transparent and personaliized recommendations, reducing the odds of rehsopitalization and increasing overall quality care.</p>
           </div>
         </div>
-
-
       </div>
     </div>
   </section><!-- End Hero -->
@@ -123,7 +121,7 @@
         <div class="row content">
           <div class="col-lg-6 pt-4 pt-lg-0">
             <p>
-              An integrated home health referral system aimed to mitigate existing inefficient communication streams, enable a streamlined discharge process, and optimize the time for a patient to get care, as well as the quality. The system will primarily be a recommendation dashboard for discharge planners to quickly and seamlessly generate home health agency recommendations personalized to the patient, with clear and relevant comparison metrics. <br><br>
+              An integrated home health referral system aimed to mitigate existing inefficient communication streams, enable a streamlined discharge process, and optimize the time for a patient to get quality care. The system will primarily be a recommendation dashboard for discharge planners to quickly and seamlessly generate home health agency recommendations personalized to the patient, with clear and relevant comparison metrics. <br><br>
               However, it will also act as a platform where all parties are integrated, having access to the same platform and database to eliminate prior discrepancies. Most of all, it’s a platform enabling patients to get personalized recommendations, faster care, and true transparency. <br><br>
             </p>
 
@@ -133,9 +131,9 @@
             <p>
               Haoma is built on the three fundamental pillars:
             <ul>
-              <li><i class="ri-check-double-line"></i> Efficiency</li>
-              <li><i class="ri-check-double-line"></i> Transparency</li>
-              <li><i class="ri-check-double-line"></i> Personalization</li>
+              <li><i class="ri-check-double-line"></i> Increased Productivity</li>
+              <li><i class="ri-check-double-line"></i> Reduced Compliance Risk </li>
+              <li><i class="ri-check-double-line"></i> Improved Patient Outcomes</li>
             </ul><br>Check us out on GitHub!
               </p>
             
@@ -220,7 +218,7 @@
               </div>
               <div class="member-info">
                 <h4>Victor Nazlukhanyan</h4>
-                <span>CEO, Data Scientist</span>
+                <span>Co-founder, CEO </span>
               </div>
             </div>
           </div>
@@ -235,7 +233,7 @@
               </div>
               <div class="member-info">
                 <h4>Christabelle Pabalan</h4>
-                <span>Product Strategist, Data Scientist</span>
+                <span>Co-founder</span>
               </div>
             </div>
           </div>
@@ -250,7 +248,7 @@
               </div>
               <div class="member-info">
                 <h4>Patrick Poon</h4>
-                <span>Product Manager, Full-Stack Developer</span>
+                <span>Co-founder</span>
               </div>
             </div>
           </div>
@@ -265,7 +263,7 @@
               </div>
               <div class="member-info">
                 <h4>Nicolas Decavel-Bueff</h4>
-                <span>CTO, DBA, Data Scientist</span>
+                <span>Co-founder</span>
               </div>
             </div>
           </div>
@@ -280,7 +278,7 @@
               </div>
               <div class="member-info">
                 <h4>Zachary Dougherty</h4>
-                <span>DBA, Data Scientist</span>
+                <span>Co-founder</span>
               </div>
             </div>
           </div>
@@ -295,7 +293,7 @@
               </div>
               <div class="member-info">
                 <h4>Noah Matsuyoshi</h4>
-                <span>Full-Stack Developer</span>
+                <span>Co-founder</span>
               </div>
             </div>
           </div>
@@ -310,7 +308,7 @@
               </div>
               <div class="member-info">
                 <h4>Grant Phillips</h4>
-                <span>Data Scientist</span>
+                <span>Co-founder</span>
               </div>
             </div>
           </div>
@@ -326,52 +324,24 @@
 
         <div class="section-title">
           <h2>Frequently Asked Questions</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         </div>
 
         <div class="faq-list">
           <ul>
             <li data-aos="fade-up">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse" data-bs-target="#faq-list-1">Non consectetur a erat nam at lectus urna duis? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse" data-bs-target="#faq-list-1">What factors contribute to the Haoma Score? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-1" class="collapse show" data-bs-parent=".faq-list">
                 <p>
-                  Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.
+                  The Haoma Score is the rating given to a home health agency particular to each patient. Our system flags certain keywords in the patient pdf and synthesizes general and flagged metrics to create a personalized rating. 
                 </p>
               </div>
             </li>
 
             <li data-aos="fade-up" data-aos-delay="100">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-2" class="collapsed">Feugiat scelerisque varius morbi enim nunc? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-2" class="collapsed"> How are the recommendations made? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-2" class="collapse" data-bs-parent=".faq-list">
                 <p>
-                  Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.
-                </p>
-              </div>
-            </li>
-
-            <li data-aos="fade-up" data-aos-delay="200">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-3" class="collapsed">Dolor sit amet consectetur adipiscing elit? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-              <div id="faq-list-3" class="collapse" data-bs-parent=".faq-list">
-                <p>
-                  Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar elementum integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque eu tincidunt. Lectus urna duis convallis convallis tellus. Urna molestie at elementum eu facilisis sed odio morbi quis
-                </p>
-              </div>
-            </li>
-
-            <li data-aos="fade-up" data-aos-delay="300">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-4" class="collapsed">Tempus quam pellentesque nec nam aliquam sem et tortor consequat? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-              <div id="faq-list-4" class="collapse" data-bs-parent=".faq-list">
-                <p>
-                  Molestie a iaculis at erat pellentesque adipiscing commodo. Dignissim suspendisse in est ante in. Nunc vel risus commodo viverra maecenas accumsan. Sit amet nisl suscipit adipiscing bibendum est. Purus gravida quis blandit turpis cursus in.
-                </p>
-              </div>
-            </li>
-
-            <li data-aos="fade-up" data-aos-delay="400">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-5" class="collapsed">Tortor vitae purus faucibus ornare. Varius vel pharetra vel turpis nunc eget lorem dolor? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-              <div id="faq-list-5" class="collapse" data-bs-parent=".faq-list">
-                <p>
-                  Laoreet sit amet cursus sit amet dictum sit amet justo. Mauris vitae ultricies leo integer malesuada nunc vel. Tincidunt eget nullam non nisi est sit amet. Turpis nunc eget lorem dolor sed. Ut venenatis tellus in metus vulputate eu scelerisque.
+                 We begin by filtering out agencies that don't offer the services that the patient requires and do not offer service in the patients' region. Afterwards, we display the top 20 agencies using the agencys' Haoma Score.
                 </p>
               </div>
             </li>
