--- a/code/app/templates/dashboard.html
+++ b/code/app/templates/dashboard.html
@@ -9,32 +9,22 @@
 <div>
 <body>
 </br>
-    <div class="agency-header">   
-        <div class="container">
-            <div class="row">
-                <div class="col-6">
-                </div>
-                <div class="col-6">
-                    <div class="card bg-light mb-3">
-                        <h5 class="card-header" style="text-align:center"><b>Personalized Haoma Score for {{patient_name}}</b></h5>
-                    </div>
-                </div>
-            </div>
-        </div>
-
+    <div class="agency-header"> 
     
         <div class="container">
             <div class="row">    
-                <div class="col-6">
+                <div class="col-{{col_first_size}}">
                     <div class="card-body">
                         <h1 class="align-middle" style="font-family:tahoma;color:#376b69;text-align:center"><br><b>Haoma Compare</b></h1>
+                        {% if show_haoma_desc %}  
                         <h3 class="align-middle" style="text-align:center">Based on Official Medicare Surveys</h3>
+                        {% endif %}
                         <p class="card-text">
                         </p>
                     </div>
                 </div>
                 {% for i in range(num_agencies) %}
-                <div class="col-md-2">
+                <div class="col-{{col_size}}">
                     <div class="card card-style mb-3">
                         <div class="card-body">
                             <div class="chart-container" style="position: relative;">
@@ -49,13 +39,13 @@
     
         <div class="container">
             <div class="row">    
-                <div class="col">
+                <div class="col-{{col_first_size}}">
                     <div class="card bg-white mb-3">
                     <h5 class="card-header">&nbsp;</h5>
                     </div>
                 </div>
                 {% for i in range(num_agencies) %}
-                <div class="col">
+                <div class="col-{{col_size}}">
                     <div class="card bg-light mb-3">
                     <h5 class="card-header" style="color: {{colors_arr[i]}};">{{name_arr[i].title()}}</h5>
                     </div>
@@ -69,7 +59,7 @@
         {% for k in dashboard_key_order %}
         <div class="container">
             <div class="row">   
-                <div class="col-3">
+                <div class="col-{{col_first_size}}">
                     <div class="card card-body" style="position: relative; height: {{dashboard_info[k]['height_desc']}};">
                         <div class="chart-container">
                             <h5 class="card-title"><b>{{dashboard_info[k]['title']}}</b></h5>
@@ -78,11 +68,11 @@
                     </div>
                 </div>
                 {% for i in range(num_agencies) %}
-                <div class="col-3">
+                <div class="col-{{col_size}}">
                     <div class="card card-style mb-2">
                         <div class="card-body">
                             <div class="chart-container" style="position: relative; height: {{dashboard_info[k]['height_data']}};">
-                                <canvas id="{{k}}{{i}}"></canvas>
+                                <canvas id="{{k}}{{i}}" style="height: 100%"></canvas>
                             </div>
                         </div>
                     </div>
@@ -262,7 +252,7 @@ Chart.pluginService.register({
             ctx.restore();
 
             var denominator = chart.options.plugin_denominator;
-            var fontSize = (height / denominator).toFixed(2);
+            var fontSize = ((height + 1 * num_agencies) / 100).toFixed(2);
             ctx.font = fontSize + "em sans-serif";
             ctx.textBaseline = "middle";
 
