--- a/code/app/templates/agency.html
+++ b/code/app/templates/agency.html
@@ -15,9 +15,12 @@
     <body>
         <center>
         <div class="container">
+            <br>
             <div class="header">
-                <h3 class="text-muted">Requests for {{username}}</h3>
+                <h3 class="agency-head" style="font-family:arial;color:#094d41"><b>Requests for: {{username|title}}</b></h3>
             </div>
+            <br>
+            <br>
             <table class="table table-hover">
                 <thead>
                     <tr>
