--- a/code/app/templates/discharge.html
+++ b/code/app/templates/discharge.html
@@ -18,8 +18,9 @@
     </br>
         <div class="container">
             <div class="header">
-                <h3 class="text-muted">Patients for {{username}}</h3>
+                <h3 class="agency-head" style="font-family:arial;color:#094d41"><b>Patients for: {{username | title}}</b></h3>
             </div>
+            <br>
             <table class="table table-hover">
                 <thead>
                     <tr>
