added 'patients list' button

--- a/code/app/templates/patient.html
+++ b/code/app/templates/patient.html
@@ -26,7 +26,9 @@
     <div class="container">
       <div class="header"><br>
         <h3 class="text-muted">
-
+            <div>
+              <a href="{{ url_for('discharge') }}" class="btn btn-primary">Patients List</a>
+            </div>
             <div align="center" style="color:#211F1F;font-size:35px">
                 <strong>{{patient.first}}'s recommendations:</strong>
             </div>
