--- a/code/app/templates/discharge.html
+++ b/code/app/templates/discharge.html
@@ -1,5 +1,7 @@
-{% extends "headerbase.html" %}
+{% extends 'sidebar-user.html' %}
+
 {% block content %}
+
 <br><br>
 <html>
     <head>
@@ -12,6 +14,40 @@
               })
             }
         </script>
+            <script>
+                $("#menu-toggle").click(function(e) {
+                    e.preventDefault();
+                    $("#wrapper").toggleClass("toggled");
+                });
+                $("#menu-toggle-2").click(function(e) {
+                    e.preventDefault();
+                    $("#wrapper").toggleClass("toggled-2");
+                    $('#menu ul').hide();
+                });
+                
+                function initMenu() {
+                    $('#menu ul').hide();
+                    $('#menu ul').children('.current').parent().show();
+                    //$('#menu ul:first').show();
+                    $('#menu li a').click(
+                    function() {
+                        var checkElement = $(this).next();
+                        if ((checkElement.is('ul')) && (checkElement.is(':visible'))) {
+                            return false;
+                        }
+                        if ((checkElement.is('ul')) && (!checkElement.is(':visible'))) {
+                            $('#menu ul:visible').slideUp('normal');
+                            checkElement.slideDown('normal');
+                            return false;
+                        }
+                    }
+                    );
+                }
+                $(document).ready(function() {
+                    initMenu();
+                });
+        
+            </script>
     </head>
     <body>
     </br>
