--- a/code/app/templates/discharge.html
+++ b/code/app/templates/discharge.html
@@ -1,55 +1,24 @@
 {% extends 'sidebar-user.html' %}
 
-{% block content %}
+{% block patient_list %}
 
 <br><br>
 <html>
     <head>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.3/jquery.min.js"></script>
+        {% block head %}
+        {{ super() }}
         <script type="text/javascript">
-            let patientId = null;
-            function removePatient() {
-              $.post("{{url_for('remove_patient')}}", { id: patientId }, function (response) {
-                location.reload();
-              })
+            let patient_id = null;
+            function removePatient(idx) {
+                $.post("{{url_for('change_rec_status')}}", { status: "R", patient_id: patient_id }, function (response) {
+                    location.reload();
+                })
             }
         </script>
-            <script>
-                $("#menu-toggle").click(function(e) {
-                    e.preventDefault();
-                    $("#wrapper").toggleClass("toggled");
-                });
-                $("#menu-toggle-2").click(function(e) {
-                    e.preventDefault();
-                    $("#wrapper").toggleClass("toggled-2");
-                    $('#menu ul').hide();
-                });
-                
-                function initMenu() {
-                    $('#menu ul').hide();
-                    $('#menu ul').children('.current').parent().show();
-                    //$('#menu ul:first').show();
-                    $('#menu li a').click(
-                    function() {
-                        var checkElement = $(this).next();
-                        if ((checkElement.is('ul')) && (checkElement.is(':visible'))) {
-                            return false;
-                        }
-                        if ((checkElement.is('ul')) && (!checkElement.is(':visible'))) {
-                            $('#menu ul:visible').slideUp('normal');
-                            checkElement.slideDown('normal');
-                            return false;
-                        }
-                    }
-                    );
-                }
-                $(document).ready(function() {
-                    initMenu();
-                });
-        
-            </script>
+        {% endblock %}
     </head>
     <body>
+    
     </br>
     </br>
         <div class="container">
@@ -91,7 +60,7 @@
                                                     View
                                                 </button></td>
                                                 <td width="5%"><button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#deletePatientModal" 
-                                                    onclick="patientId={{patient['id']}};document.getElementById('deletePatientModalLabel').innerHTML='Delete Patient '+patientId;return false;">
+                                                    onclick="patient_id={{patient['id']}};document.getElementById('deletePatientModalLabel').innerHTML='Delete Patient '+patient_id;return false;">
                                                     <i class="bi bi-trash"></i>
                                                 </button></td>
                                             </tr>
@@ -125,7 +94,7 @@
                                                     View
                                                 </button></td>
                                                 <td width="5%"><button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#deletePatientModal" 
-                                                    onclick="patientId={{patient['id']}};document.getElementById('deletePatientModalLabel').innerHTML='Delete Patient '+patientId;return false;">
+                                                    onclick="patient_id={{patient['id']}};document.getElementById('deletePatientModalLabel').innerHTML='Delete Patient '+patient_id;return false;">
                                                     <i class="bi bi-trash"></i>
                                                 </button></td>
                                             </tr>
@@ -139,7 +108,7 @@
             </div>
         </div>
         <center>
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#patientUploadModal">
+            <button id="addPatientButton" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#patientUploadModal">
                 Add Patient
             </button>
         </center>
@@ -152,7 +121,7 @@
                   <h5 class="modal-title" id="deletePatientModalLabel"></h5>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <button class="btn btn-danger" onclick="removePatient();return false;">Delete</button>
+                <button class="btn btn-danger" onclick="removePatient(patient_id);return false;">Delete</button>
               </div>
             </div>
         </div>
@@ -202,4 +171,4 @@
         </div>
     </body>
 </html>
-{%endblock%}
+{% endblock %}
