--- a/code/app/templates/sidebar-user.html
+++ b/code/app/templates/sidebar-user.html
@@ -1,4 +1,7 @@
+{% extends "headerbase.html" %}
+{% block content %}
 <head>
+   {% block head %}
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link href="{{ url_for('static', filename='vendor/aos/aos.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='vendor/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
@@ -8,6 +11,7 @@
     <link href="{{ url_for('static', filename='vendor/remixicon/remixicon.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='vendor/swiper/swiper-bundle.min.css') }}" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/sidebar-user.css') }}">
+    <script rel="javascript" type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
     <script>
         $("#menu-toggle").click(function(e) {
@@ -43,6 +47,7 @@
         });
 
     </script>
+    {% endblock %}
 </head>
 
  
@@ -107,8 +112,8 @@
     <!-- jQuery -->
  
  </body>
+ {% block patient_list %}
+ {% endblock %}
  
  </html>
-
-  {% block content %}
   {% endblock %}
