--- a/code/app/templates/index.html
+++ b/code/app/templates/index.html
@@ -1,2 +1,8 @@
 {% extends "base.html" %}
+
+{% block head %}
+{{ super() }}
+{% include "ga.html" %}
+{% endblock %}
+
 {% block content %}Haoma{%endblock%}
