finish merging ga changes

--- a/code/app/templates/discharge.html
+++ b/code/app/templates/discharge.html
@@ -4,9 +4,8 @@
 <br><br>
 <html>
     <head>
-        {% block head %}
+        {% block header %}
         {{ super() }}
-        {% include "ga.html" %}
         <script type="text/javascript">
             let patient_id = null;
             function removePatient(idx) {
